[package]
name = "chancery"
version = "0.1.0"
edition = "2021"
description = "Chancery — a Debian-style signed package repository manager for Aegis/herald"
license = "MIT OR Apache-2.0"
repository = "https://github.com/exec/chancery"
readme = "README.md"
keywords = ["repository", "signing", "debian", "ecdsa", "packages"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pem", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tar = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tiny_http = "0.12"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
